gcc/testsuite/g++.dg/modules/mod-decl-7.C
// PR c++/115200
// { dg-additional-options "-fmodules-ts -Wno-global-module" }
// { dg-module-cmi !M }

module;

void foo() {

export module M;  // { dg-error "unexpected module directive" }

}
